  key was deprecated in v1.8.2 and is now removed. Use
  `config.unbind(key)` instead.
- `:yank markdown` was deprecated in v1.7.0 and is now removed. Use
  `:yank inline [{title}]({url})` instead.

Added
~~~~~

- New `:debug-keytester` command, which shows a "key tester" widget.
  Previously, that was only available as a separate application via `python3 -m
  scripts.keytester`.

v1.11.1 (unreleased)
--------------------

No changes yet.

v1.11.0 (2020-04-27)
--------------------

Added
~~~~~

- New settings:
  * `search.wrap` which can be set to false to prevent wrapping around the page
    when searching. With QtWebEngine, Qt 5.14 or newer is required.
  * `content.unknown_url_scheme_policy` which allows controlling when an
    external application is opened for external links (never, from user
    interaction, always).
  * `content.fullscreen.overlay_timeout` to configure how long the fullscreen
    overlay should be displayed. If set to `0`, no overlay is displayed.
  * `hints.padding` to add additional padding for hints.
  * `hints.radius` to set a border radius for hints (set to `3` by default).
- New placeholders for `url.searchengines` values:
  * `{unquoted}` inserts the search term without any quoting.
  * `{semiquoted}` (same as `{}`) quotes most special characters, but slashes
    remain unquoted.
  * `{quoted}` (same as `{}` in earlier releases) also quotes slashes.

Changed
~~~~~~~

- First adaptions to Qt 5.15, including a stop-gap measure for session loading
  not working properly with it.
- Searching now wraps around the page by default with QtWebKit (where it didn't
  before). Set `search.wrap` to `false` to restore the old behavior.
- The `{}` placeholder for search engines (the `url.searchengines` setting) now
  does not quote slashes anymore, but other characters typically encoded in
  URLs still get encoded. This matches the behavior of search engines in
  Chromium. To revert to the old behavior, use `{quoted}` instead.