@@ -19,16 +19,29 @@
 
 import logging
 
+import pytest
 import pytest_bdd as bdd
 bdd.scenarios('open.feature')
 
 
-def test_open_s(quteproc, ssl_server):
+@pytest.mark.parametrize('scheme', ['http://', ''])
+def test_open_s(quteproc, ssl_server, scheme):
     """Test :open with -s."""
     quteproc.set_setting('content.ssl_strict', 'false')
-    quteproc.send_cmd(':open -s http://localhost:{}/'.format(ssl_server.port))
-    quteproc.mark_expected(category='message',
-                           loglevel=logging.ERROR,
-                           message="Certificate error: *")
-    quteproc.wait_for_load_finished('/', port=ssl_server.port, https=True,
-                                    load_status='warn')
+    quteproc.send_cmd(':open -s {}localhost:{}/'
+                      .format(scheme, ssl_server.port))
+    if scheme == 'http://':
+        # Error is only logged once
+        quteproc.mark_expected(category='message',
+                            loglevel=logging.ERROR,
+                            message="Certificate error: *")
+        quteproc.wait_for_load_finished('/', port=ssl_server.port, https=True,
+                                        load_status='warn')
+    else:
+        quteproc.wait_for_load_finished('/', port=ssl_server.port, https=True)
+
+
+def test_open_s_non_http(quteproc, ssl_server):
+    """Test :open with -s and a qute:// page."""
+    quteproc.send_cmd(':open -s qute://version')
+    quteproc.wait_for_load_finished('qute://version')
